# crowdmind

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
crowdmind/: __init__.py  cli.py  config.py
crowdmind/context/: __init__.py  builder.py
crowdmind/ideate/: __init__.py  features.py
crowdmind/market/: __init__.py  analysis.py
crowdmind/optimize/: __init__.py  autoresearch.py
crowdmind/persona_packs/: consumer.yaml  devtools.yaml  enterprise.yaml  saas.yaml
crowdmind/report/: __init__.py  markdown.py
crowdmind/research/: __init__.py  codebase.py  github.py  hackernews.py  multi.py  reddit.py
crowdmind/validate/: __init__.py  panel.py  personas.py  runner.py  survey.py
tests/: conftest.py  test_end_to_end.py  test_optimize_pipelining.py  test_panel_integration.py  test_runner.py  test_survey_integration.py
