[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crowdmind"
version = "0.2.1"
description = "Autonomous product research powered by AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "yasintoy"}
]
keywords = [
    "product-research",
    "ai",
    "validation",
    "llm",
    "edsl",
    "market-research",
    "personas",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "edsl>=1.0.0",
    "typer[all]>=0.9.0,<0.10.0",
    "click>=8.0.0,<8.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
google = ["google-generativeai>=0.3.0"]
groq = ["groq>=0.4.0"]
ollama = ["ollama>=0.1.0"]
all-providers = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "google-generativeai>=0.3.0",
    "groq>=0.4.0",
    "ollama>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
crowdmind = "crowdmind.cli:app"

[project.urls]
Homepage = "https://github.com/yasintoy/crowdmind"
Documentation = "https://github.com/yasintoy/crowdmind#readme"
Repository = "https://github.com/yasintoy/crowdmind"

[tool.hatch.build.targets.sdist]
include = [
    "/crowdmind",
    "/persona_packs",
]

[tool.hatch.build.targets.wheel]
packages = ["crowdmind"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
